// quiosque.proto
syntax = "proto3";

// Ajuste o pacote para refletir a mudança
option java_multiple_files = true;
option java_package = "br.com.quiosque.grpc";

// Serviço principal do quiosque
service QuiosqueService {
  // Obtém a lista de produtos disponíveis
  rpc GetProducts (Empty) returns (ProductList);
  // Cria um novo pedido
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
  // Processa o pagamento de um pedido
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

// Mensagem vazia para requisições sem parâmetros
message Empty {}

// Representa um produto
message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  string imageUrl = 4;
}

// Lista de produtos
message ProductList {
  repeated Product products = 1;
}

// Item de um pedido
message OrderItem {
  string productId = 1;
  int32 quantity = 2;
}

// Requisição para criar um pedido
message OrderRequest {
  repeated OrderItem items = 1;
}

// Resposta da criação do pedido
message OrderResponse {
  string orderId = 1;
  double totalAmount = 2;
  string status = 3; // ex: "PENDING_PAYMENT"
}

// Requisição de pagamento
message PaymentRequest {
  string orderId = 1;
  string paymentMethod = 2; // ex: "CREDIT_CARD", "PIX"
}

// Resposta do pagamento
message PaymentResponse {
  string transactionId = 1;
  bool success = 2;
  string message = 3;
}
